--- a/src/2-form.html
+++ b/src/2-form.html
@@ -10,8 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <p><a href="index.html">Go back</a></p>
     <form class="feedback-form" autocomplete="off">
       <label class="mark-form">
         Email
